[workspace]
resolver = "2"
members = ["exporter-389ds-rs", "internal", "nagios-389ds-rs", "xtask"]

  [workspace.dependencies]
  anyhow = "1.0.95"
  chrono = "0.4.39"
  clap = { version = "4.5.30", features = ["derive"] }
  ldap3 = "0.11.5"
  metrics = "0.24.1"
  metrics-exporter-prometheus = "0.16.2"
  openssl-sys = { version = "0.9.106", features = ["vendored"] }
  serde = { version = "1.0.217", features = ["derive"] }
  serde_json = "1.0.138"
  struct-field-names-as-array = "0.3.0"
  tokio = { version = "1.43.0", features = ["full"] }
  toml = "0.8.20"
  tracing = "0.1.41"
  serde-aux = "4.6.0"
  tracing-subscriber = "0.3.19"
  sha2 = "0.10.8"
