[package]
name = "haproxy-389ds-rs"
version = "0.2.0"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
internal = { path = "../internal" }
tokio-util = { workspace = true }
actix-web = "4.11.0"
