[package]
name = "haproxy-389ds-rs"
version = "0.2.1"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
internal = { path = "../internal" }
tokio-util = { workspace = true }
actix-web = "4.11.0"
utoipa = { version = "5.4.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
utoipa-actix-web = "0.1.2"
