[package]
name = "xtask"
version = "0.1.0"
license = "MIT"
edition = "2021"

[dependencies]
serde = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
rpm = "0.16.0"
xshell = "0.2.7"
rustix = { version = "0.38.44", features = ["system"] }
tar = "0.4.44"
flate2 = "1.1.0"
