[package]
name = "xtask"
version = "0.1.0"
license = "MIT"
edition = "2021"

[dependencies]
serde = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
rpm = "0.16.1"
xshell = "0.2.7"
xtask-toolkit = { git = "https://github.com/dzordzu/xtask-toolkit", features = [
   "git-precommit",
   "targz",
   "gh-cli",
   "package-rpm",
   "checksums",
] }
